--- a/arp_agglomerationsprogramme_pub/build.gradle
+++ b/arp_agglomerationsprogramme_pub/build.gradle
@@ -12,11 +12,11 @@ task transferArpAggloprogramme(type: Db2Db){
         new TransferSet('arp_agglomerationsprogramme_pub_agglomrtnsprgrmme_massnahme.sql',
             'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme', true),
         new TransferSet('arp_agglomerationsprogramme_pub_agglomrtnsprgrmme_massnahme_punkt.sql',
-            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_punkt', true)
+            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_punkt', true),
         new TransferSet('arp_agglomerationsprogramme_pub_agglomrtnsprgrmme_massnahme_linie.sql',
-            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_linie', true)		
+            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_linie', true),		
         new TransferSet('arp_agglomerationsprogramme_pub_agglomrtnsprgrmme_massnahme_flaeche.sql',
-            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_flaeche', true)		
+            'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_massnahme_flaeche', true),		
         new TransferSet('arp_agglomerationsprogramme_pub_agglomrtnsprgrmme_uebersicht_gemeinde.sql',
             'arp_agglomerationsprogramme_pub.agglomrtnsprgrmme_uebersicht_gemeinde', true)				
     ];
