[afu_gewaesserschutz_pub] change defaultTasks

--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -6,7 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 apply plugin: "de.undercouch.download"
 
 
-defaultTasks 'removeTmpFiles'
+//defaultTasks 'removeTmpFiles'
+defaultTasks 'transferSurroundingCantons'
 
 task transferAfuGewaesserschutz(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
