--- a/afu_bodenprofilstandorte_nabodat_pub/build.gradle
+++ b/afu_bodenprofilstandorte_nabodat_pub/build.gradle
@@ -13,5 +13,5 @@ task transferbodenprofilstandorte(type: Db2Db){
     ];
 }
 task refreshSolr(type:Exec, dependsOn:'transferbodenprofilstandorte') {
-        commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.bodeninformationen.bodenprofilstandorte_v2'
+        commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.bodeninformationen.bodenprofilstandorte'
 }
