--- a/agi_adressen_pub/build.gradle
+++ b/agi_adressen_pub/build.gradle
@@ -4,7 +4,7 @@ import ch.so.agi.gretl.api.TransferSet
 defaultTasks 'transferAgiAdressen'
 
 task transferAgiAdressen(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_adressen_pub_verbindungslinie_strasse_hausnummer.sql',
