--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "54321:5432"
     volumes:
       - ${PWD}/development_dbs/setup.sql:/pgconf/setup.sql
+      - ~/pgdata-edit:/pgdata
   pub-db:
     build: .
     image: sogis/postgis-db:localbuild
@@ -34,3 +35,4 @@ services:
       - "54322:5432"
     volumes:
       - ${PWD}/development_dbs/setup.sql:/pgconf/setup.sql
+      - ~/pgdata-pub:/pgdata
