--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -35,7 +35,8 @@ task transferAlteGrundnutzung(type: Db2Db, dependsOn: "transferArpNpl") {
     ];
 }
 
-task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferAlteGrundnutzung") {
+//task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferAlteGrundnutzung") {
+task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferArpNpl") {
     description = "Aktualisierung der aggregierten Zonenflächen pro Gemeinde"
     group = GROUP
     database = [dbUriPub, dbUserPub, dbPwdPub]
