[arp_npl_pub] fix 16

--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -35,8 +35,7 @@ task transferAlteGrundnutzung(type: Db2Db, dependsOn: "transferArpNpl") {
     ];
 }
 
-//task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferAlteGrundnutzung") {
-task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferArpNpl") {
+task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "transferAlteGrundnutzung") {
     description = "Aktualisierung der aggregierten Zonenflächen pro Gemeinde"
     group = GROUP
     database = [dbUriPub, dbUserPub, dbPwdPub]
