--- a/swisstopo_gebaeudeadressen/build.gradle
+++ b/swisstopo_gebaeudeadressen/build.gradle
@@ -7,7 +7,8 @@ import de.undercouch.gradle.tasks.download.Download
 apply plugin: "de.undercouch.download"
 apply plugin: "ch.so.agi.gretl"
 
-defaultTasks 'dbImport'
+//defaultTasks 'dbImport'
+defaultTasks 'transferToPub'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
@@ -47,4 +48,16 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
     dataFile = file(xtfFilePath)
     deleteData = true
     strokeArcs = true
+}
+
+//task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
+task transferToPub(type: Db2Db) {
+    description = "Transfer und Umbau der Daten von Edit nach Pub"
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet("transform_swisstopo_gebaeudeadressen_pub.sql", 'swisstopo_gebaeudeadressen_pub.gebaeudeadressen_adresse', true)
+    ];
+    fetchSize = 1000
+    batchSize = 1000
 }
