[agi_swisstopo_gebaeudeadressen] clean code for merging

--- a/agi_swisstopo_gebaeudeadressen/build.gradle
+++ b/agi_swisstopo_gebaeudeadressen/build.gradle
@@ -7,8 +7,8 @@ import de.undercouch.gradle.tasks.download.Download
 apply plugin: "de.undercouch.download"
 apply plugin: "ch.so.agi.gretl"
 
-//defaultTasks 'dbImport'
-defaultTasks 'transferToPub'
+defaultTasks 'dbImport'
+//defaultTasks 'transferToPub'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
@@ -50,8 +50,8 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
     strokeArcs = true
 }
 
-//task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
-task transferToPub(type: Db2Db) {
+task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
+//task transferToPub(type: Db2Db) {
     description = "Transfer und Umbau der Daten von Edit nach Pub"
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
