--- a/agi_gb2av_controlling/build.gradle
+++ b/agi_gb2av_controlling/build.gradle
@@ -4,7 +4,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-//defaultTasks 'upsertTable'
+defaultTasks 'transferData'
 
 task upsertVollzugsmeldungen(type: SqlExecutor) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
