--- a/agi_gb2av_controlling/build.gradle
+++ b/agi_gb2av_controlling/build.gradle
@@ -30,7 +30,7 @@ task upsertAvMutationen(type: SqlExecutor, dependsOn: 'upsertVollzugsmeldungen')
 task transferData(type: Db2Db, dependsOn: 'upsertAvMutationen') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlParameters = [gdi_env: gdiEnv]
+    sqlParameters = [gdi_env: '-int']
     transferSets = [
             new TransferSet('agi_gb2av_controlling_pub_controlling_gb2av_vollzugsmeldung_delta.sql', 'agi_gb2av_controlling_pub.controlling_gb2av_vollzugsmeldung_delta', true),
             new TransferSet('agi_gb2av_controlling_pub_controlling_av2gb_mutationen.sql', 'agi_gb2av_controlling_pub.controlling_av2gb_mutationen', true)
