--- a/agi_gb2av_controlling/build.gradle
+++ b/agi_gb2av_controlling/build.gradle
@@ -7,8 +7,7 @@ defaultTasks 'transferData'
 def bucket
 if (gretlEnvironment == "test") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av-test/'"
-}
-else if (gretlEnvironment == "integration") {
+} else if (gretlEnvironment == "integration") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av-int/'"
 } else if (gretlEnvironment == "production") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av/'"
