Modell ohne OID AS INTERLIS.UUIDOID wegen CsvValidator

--- a/awjf_waldpflege_kontrolle/build.gradle
+++ b/awjf_waldpflege_kontrolle/build.gradle
@@ -8,23 +8,41 @@ defaultTasks 'transferAwjfWaldpflegeErfassung'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 
+def pathToUserDir = System.getProperty("user.dir")
 
-task deleteFromAwjfGesuchsteller(type: SqlExecutor){
+
+task copyCsvFile(type: Copy) {
+    from "upload/"
+    into "upload/"
+    include("uploadFile")
+    rename("uploadFile", "uploadFile.csv")
+}
+
+
+task validateCsvFile(type: CsvValidator, dependsOn: 'copyCsvFile') {
+    models = "SO_AWJF_Gesuchsteller_20201012"
+    firstLineIsHeader=true
+    valueSeparator = ';'
+    encoding = 'UTF-8'
+    dataFiles = [file("upload/uploadFile.csv")]
+}
+
+task deleteFromAwjfGesuchsteller(type: SqlExecutor, dependsOn: 'validateCsvFile') {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = ['delete_from_awjf_gesuchsteller.sql']
 }
 
-task importGesuchsteller(type: CsvImport, dependsOn: 'deleteFromAwjfGesuchsteller'){
+task importGesuchsteller(type: CsvImport, dependsOn: 'deleteFromAwjfGesuchsteller') {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     schemaName = 'awjf_gesuchsteller'
     tableName = 'gesuchsteller_gesuchsteller'
-    firstLineIsHeader=true
-    valueSeparator = ','
+    firstLineIsHeader = true
+    valueSeparator = ';'
     encoding = 'UTF-8'
     dataFile = "upload/uploadFile"
 }
 
-task transferAwjfWaldpflegeErfassung(type: Db2Db, dependsOn: 'importGesuchsteller'){
+task transferAwjfWaldpflegeErfassung(type: Db2Db, dependsOn: 'importGesuchsteller') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     transferSets = [
@@ -36,7 +54,7 @@ task transferAwjfWaldpflegeErfassung(type: Db2Db, dependsOn: 'importGesuchstelle
     }
 }
 
-task deleteFromAwjfWaldpflegeErfassung(type: SqlExecutor){
+task deleteFromAwjfWaldpflegeErfassung(type: SqlExecutor) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = ['delete_from_awjf_waldpflege_erfassung.sql']
 }
