--- a/awjf_waldwanderwege_pub/build.gradle
+++ b/awjf_waldwanderwege_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferWaldwanderwege'
+defaultTasks 'refreshSolr'
 
 task transferWaldwanderwege(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -14,3 +14,6 @@ task transferWaldwanderwege(type: Db2Db){
     ];        
 }
 
+task refreshSolr(type:Exec, dependsOn:'transferWaldwanderwege') {
+	commandLine 'curl', '-i', '--max-time', '10', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.waldwanderwege_posten'
+}
