[agi_plz_ortschaften_pub] Update ili2pg4.3.1

--- a/agi_plz_ortschaften_pub/build.gradle
+++ b/agi_plz_ortschaften_pub/build.gradle
@@ -89,8 +89,8 @@ task convertDataSogis(type: SqlExecutor, dependsOn: 'convertDataEdit'){
     sqlFiles = [
         'delete_ortschaft.sql',
         'delete_postleitzahl.sql',
-        'insert_ortschaft.sql',
-        'insert_postleitzahl.sql'
+        'insert_ortschaft_sogis.sql',
+        'insert_postleitzahl_sogis.sql'
     ]
 }
 
