--- a/agi_plz_ortschaften_pub/build.gradle
+++ b/agi_plz_ortschaften_pub/build.gradle
@@ -52,20 +52,6 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
     strokeArcs = true
 }
 
-task dbImportSogis(type: Ili2pgImport, dependsOn: 'dbImport'){
-    description = "Import plz_ortschaften-Data into Sogis database"
-    doLast {
-        println "Data imported into db: " + dbUriSogis
-    }
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    dbschema = "agi_plz_ortschaften"
-    models = "PLZOCH1LV95D"
-    disableValidation = false
-    dataFile = file(xtfFilePath)
-    deleteData = true
-    strokeArcs = true
-}
-
 task convertDataEdit(type: SqlExecutor, dependsOn: 'dbImportSogis'){
     description = "Convert plz_ortschaften-Data to Edit Schema"
     doLast {
@@ -80,18 +66,43 @@ task convertDataEdit(type: SqlExecutor, dependsOn: 'dbImportSogis'){
     ]
 }
 
-task convertDataSogis(type: SqlExecutor, dependsOn: 'convertDataEdit'){
-    description = "Convert plz_ortschaften-Data to Sogis Schema"
+task copyDataPubSogis(type: Db2Db, dependsOn: 'convertDataEdit'){
+    description = "Copy plz_ortschaften-Data to Sogis Pub Schema"
     doLast {
-        println "plz_ortschaften-Data are converted Sogis Schema."
+        println "plz_ortschaften-Data are copied to Sogis Pub Schema."
     }
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlFiles = [
-        'delete_ortschaft.sql',
-        'delete_postleitzahl.sql',
-        'insert_ortschaft_sogis.sql',
-        'insert_postleitzahl_sogis.sql'
-    ]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    transferSets = [
+        new TransferSet('plzortschaften_ortschaft.sql', 'agi_plz_ortschaften_pub.plzortschaften_ortschaft', true),
+        new TransferSet('plzortschaften_postleitzahl.sql', 'agi_plz_ortschaften_pub.plzortschaften_postleitzahl', true)
+    ];
+}
+
+
+task copyDataSogis(type: Db2Db, dependsOn: 'copyDataPubSogis'){
+    description = "Copy plz_ortschaften-Data to Sogis Schema"
+    doLast {
+        println "plz_ortschaften-Data are copied to Sogis Schema."
+    }
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    transferSets = [
+        new TransferSet('plzortschaften_ortschaft.sql', 'agi_plz_ortschaften.nummerierngsbrche_kantonskuerzel', true),
+        new TransferSet('plzortschaften_postleitzahl.sql', 'agi_plz_ortschaften.nummerierngsbrche_nbgeometrie', true),
+        new TransferSet('nummerierngsbrche_nummerierungsbereich.sql', 'agi_plz_ortschaften.nummerierngsbrche_nummerierungsbereich', true),
+        new TransferSet('nummerierngsbrche_nummerierungsbereichpos.sql', 'agi_plz_ortschaften.nummerierngsbrche_nummerierungsbereichpos', true),
+        new TransferSet('plzortschaft_ortschaft.sql', 'agi_plz_ortschaften.plzortschaft_ortschaft', true),
+        new TransferSet('plzortschaft_ortschaft_inaenderung.sql', 'agi_plz_ortschaften.plzortschaft_ortschaft_inaenderung', true),
+        new TransferSet('plzortschaft_ortschaftsname.sql', 'agi_plz_ortschaften.plzortschaft_ortschaftsname', true),
+        new TransferSet('plzortschaft_ortschaftsname_pos.sql', 'agi_plz_ortschaften.plzortschaft_ortschaftsname_pos', true),
+        new TransferSet('plzortschaft_ortschaftsverbund.sql', 'agi_plz_ortschaften.plzortschaft_ortschaftsverbund', true),
+        new TransferSet('plzortschaft_ortschaftsverbundtext.sql', 'agi_plz_ortschaften.plzortschaft_ortschaftsverbundtext', true),
+        new TransferSet('plzortschaft_osnachfuehrung.sql', 'agi_plz_ortschaften.plzortschaft_osnachfuehrung', true),
+        new TransferSet('plzortschaft_plz6.sql', 'agi_plz_ortschaften.plzortschaft_plz6', true),
+        new TransferSet('plzortschaft_plz6_inaenderung.sql', 'agi_plz_ortschaften.plzortschaft_plz6_inaenderung', true),
+        new TransferSet('plzortschaft_plz6nachfuehrung.sql', 'agi_plz_ortschaften.plzortschaft_plz6nachfuehrung', true)
+    ];
 }
 
 task copyDataPub(type: Db2Db, dependsOn: 'convertDataSogis'){
