[agi_gb2av_controlling][agi_mopublic_pub_export] use int instead of integration

--- a/agi_mopublic_pub_export/build.gradle
+++ b/agi_mopublic_pub_export/build.gradle
@@ -25,7 +25,7 @@ def s3Bucket
 if (gretlEnvironment == "test") {
     s3Bucket = "ch.so.agi.av.mopublic-test"
 }
-else if (gretlEnvironment == "integration") {
+else if (gretlEnvironment == "int") {
     s3Bucket = "ch.so.agi.av.mopublic-int"
 }
 else if (gretlEnvironment == "production") {
