[agi_gb2av_controlling][agi_mopublic_pub_export] Undo 490cdcb

--- a/agi_gb2av_controlling/build.gradle
+++ b/agi_gb2av_controlling/build.gradle
@@ -7,7 +7,7 @@ defaultTasks 'refreshSolr'
 def bucket
 if (gretlEnvironment == "test") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av-test/'"
-} else if (gretlEnvironment == "int") {
+} else if (gretlEnvironment == "integration") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av-int/'"
 } else if (gretlEnvironment == "production") {
     bucket = "'https://s3.eu-central-1.amazonaws.com/ch.so.agi.av.gb2av/'"
