--- a/agi_inventar_hoheitsgrenzen_pub/build.gradle
+++ b/agi_inventar_hoheitsgrenzen_pub/build.gradle
@@ -1,13 +1,13 @@
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'transferAgiHoheitsgrenzsteine'
+defaultTasks 'transferAgiKantonsgrenzsteine'
 
-task transferAgiHoheitsgrenzsteine(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+task transferAgiKantonsgrenzsteine(type: Db2Db){
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('agi_hoheitsgrenzsteine_pub_kantonsgrenzstein.sql',
-                    'agi_hoheitsgrenzsteine_pub.kantonsgrenzstein', true)
+            new TransferSet('agi_inventar_hoheitsgrenzen_pub_kantonsgrenzstein.sql.sql',
+                            'agi_inventar_hoheitsgrenzen_pub.invntr_hhtsgrnzen_kantonsgrenzstein', true)
     ];
 }
